--- a/implementation.tex
+++ b/implementation.tex
@@ -24,7 +24,7 @@ blobs.
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[scale=0.35]{Figures/implementation2}
+    \includegraphics[scale=0.35]{Figures/implementation}
 \caption{\quark implementation architecture}
 \label{fig:implementation}
   \vspace*{-0.2in}
