--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,2 @@
-We propose a runtime-assisted approach to enforce convergence in distributed executions of replicated data types. The key distinguishing aspect of our approach is that it guarantees convergence \emph{unconditionally} -- without requiring data type operations to satisfy algebraic laws such as commutativity and idempotence. Consequently, programmers are no longer obligated to prove convergence on a per-type basis. Moreover, our approach lets sequential data types be reused in a distributed setting by extending their implementations rather than refactoring them.  The novel component of our approach is a distributed runtime that orchestrates \emph{well-formed } executions that are guaranteed to converge. Despite the utilization of a runtime, our approach comes at no additional cost of latency and availability. We implement our approach in a system called \quark and conduct a thorough evaluation of its performance over a large-scale collaborative editing application. 
+
+We propose a runtime-assisted approach to enforce convergence in distributed executions of replicated data types. The key distinguishing aspect of our approach is that it guarantees convergence \emph{unconditionally} -- without requiring data type operations to satisfy algebraic laws such as commutativity and idempotence. Consequently, programmers are no longer obligated to prove convergence on a per-type basis. Moreover, our approach lets sequential data types be reused in a distributed setting by extending their implementations rather than refactoring them.  The novel component of our approach is a distributed runtime that orchestrates \emph{well-formed } executions that are guaranteed to converge. Despite the utilization of a runtime, our approach comes at no additional cost of latency and availability. Instead, we introduce a novel tradeoff against a metric called \emph{staleness}, which roughly corresponds to the time taken for replicas to converge. We implement our approach in a system called Quark and conduct a thorough evaluation of its tradeoffs.
