--- a/quark.tex
+++ b/quark.tex
@@ -30,6 +30,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{microtype}
+\usepackage{balance} % To balance columns on last page
 
 \input{mydefs.tex}
 
@@ -66,7 +67,7 @@
 \begin{document}
 
 %% Title information
-\title[]{Runtime-Assisted Convergence in Replicated Data Types}
+\title[]{RunTime-Assisted Convergence in Replicated Data Types}
 %% [Short Title] is optional;
                                         %% when present, will be used in
                                         %% header instead of Full Title.
@@ -93,18 +94,18 @@
 \author{Gowtham Kaki}
 %\authornote{with author1 note}          %% \authornote is optional;
                                         %% can be repeated if necessary
-%\orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
+\orcid{0000-0002-4189-3189}             %% \orcid is optional
 \affiliation{
 %  \position{Position1}
 %  \department{Department1}              %% \department is recommended
   \institution{University of Colorado Boulder}            %% \institution is required
 %  \streetaddress{Street1 Address1}
-%  \city{City1}
+  \city{Boulder}
 %  \state{State1}
 %  \postcode{Post-Code1}
   \country{USA}                    %% \country is recommended
 }
-%\email{first1.last1@inst1.edu}          %% \email is recommended
+\email{gowtham.kaki@colorado.edu}          %% \email is recommended
 
 %% Second Author
 \author{Prasanth Prahladan}
@@ -116,15 +117,15 @@
 %  \department{Department2a}             %% \department is recommended
   \institution{University of Colorado Boulder}           %% \institution is required
 %  \streetaddress{Street2a Address2a}
-%  \city{City2a}
+  \city{Boulder}
 %  \state{State2a}
 %  \postcode{Post-Code2a}
   \country{USA}                   %% \country is recommended
 }
-%\email{first2.last2@inst2a.com}         %% \email is recommended
+\email{prasanth.prahladan@colorado.edu}         %% \email is recommended
 
 %% Third Author
-\author{Nicholas Lewchenko}
+\author{Nicholas V. Lewchenko}
 %\authornote{with author2 note}          %% \authornote is optional;
                                         %% can be repeated if necessary
 %\orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
@@ -133,11 +134,12 @@
 %  \department{Department2a}             %% \department is recommended
   \institution{University of Colorado Boulder}           %% \institution is required
 %  \streetaddress{Street2a Address2a}
-%  \city{City2a}
+  \city{Boulder}
 %  \state{State2a}
 %  \postcode{Post-Code2a}
   \country{USA}                   %% \country is recommended
 }
+\email{nile1033@colorado.edu}         %% \email is recommended
 %
 
 %% Abstract
@@ -160,8 +162,7 @@
   introduce a novel tradeoff against a metric called \emph{staleness},
   which roughly corresponds to the time taken for replicas to
   converge. We implement our approach in a system called \quark and
-  conduct a thorough evaluation of its tradeoffs in the context of two
-  case studies. 
+  conduct a thorough evaluation of its tradeoffs. 
 %%We also briefly discuss the utility of our approach in
 %%realizing causal coherency semantics in shared-memory concurrent
 %%systems,
@@ -199,7 +200,7 @@
 %% Keywords
 %% comma separated list
 \keywords{Replication, MRDT, CRDT, Runtime, Convergence, Concurrent
-Revisions, Causal Consistency, decentralized systems}  %% \keywords are mandatory in final camera-ready submission
+Revisions, Causal Consistency, Decentralized Systems}  %% \keywords are mandatory in final camera-ready submission
 
 
 %% \maketitle
@@ -223,24 +224,24 @@ Revisions, Causal Consistency, decentralized systems}  %% \keywords are mandator
 
 \input{related}
 
-\bibliography{all}
-
 %% Acknowledgments
 \begin{acks}                            %% acks environment is optional
   We thank the anonymous reviewers and our shepherd Doug Lea for their
-  thoughtful comments. First author has benefited from substantial
-  discussions with Anmol Sahoo and Suresh Jagannathan. Anmol has also
-  developed and maintained the OCaml-Scylla library, which is a key
-  piece of infrastructure underlying \quark.
+  thoughtful comments. First author has benefited from discussions
+  with Anmol Sahoo and Suresh Jagannathan. Anmol has also developed
+  and maintained the OCaml-Scylla library, which is a key piece of
+  infrastructure underlying \quark.
 \end{acks}
 
 
-%% Bibliography
-%\bibliography{bibfile}
-
 
 %% Appendix
-% \appendix
-% \section{Appendix}
+\appendix
+\section{Proofs}
+\input{proofs}
+
+
+%% Bibliography
+\bibliography{all}
 
 \end{document}
