Fix metadata for camera-ready

--- a/quark.tex
+++ b/quark.tex
@@ -34,21 +34,20 @@
 
 \input{mydefs.tex}
 
-
-%% Journal information
-%% Supplied to authors by publisher for camera-ready submission;
-%% Copyright information
-%% Supplied to authors (based on authors' rights management selection;
-%% see authors.acm.org) by publisher for camera-ready submission;
-%% use 'none' for review submission.
-%%\setcopyright{none}
-\copyrightyear{2022} 
-\acmYear{2022} 
-\setcopyright{rightsretained} 
+%%% The following is specific to PLDI '22 and the paper
+%%% 'RunTime-Assisted Convergence in Replicated Data Types'
+%%% by Gowtham Kaki, Prasanth Prahladan, and Nicholas V. Lewchenko.
+%%%
+\setcopyright{rightsretained}
+\acmPrice{}
+\acmDOI{10.1145/3519939.3523724}
+\acmYear{2022}
+\copyrightyear{2022}
+\acmSubmissionID{pldi22main-p536-p}
+\acmISBN{978-1-4503-9265-5/22/06}
 \acmConference[PLDI '22]{Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation}{June 13--17, 2022}{San Diego, CA, USA}
 \acmBooktitle{Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation (PLDI '22), June 13--17, 2022, San Diego, CA, USA}
-\acmDOI{10.1145/3519939.3523724}
-\acmISBN{978-1-4503-9265-5/22/06}
+
 %% Bibliography style
 \bibliographystyle{ACM-Reference-Format}
 %% Citation style
@@ -67,7 +66,7 @@
 \begin{document}
 
 %% Title information
-\title[]{RunTime-Assisted Convergence in Replicated Data Types}
+\title[RunTime-Assisted Convergence in Replicated Data Types]{RunTime-Assisted Convergence \\ in Replicated Data Types}
 %% [Short Title] is optional;
                                         %% when present, will be used in
                                         %% header instead of Full Title.
