Shorten to 14 pages by rewording

--- a/introduction.tex
+++ b/introduction.tex
@@ -155,8 +155,8 @@ below:
     abstract machine that together guarantee its soundness. The
     formalization has also been mechanized in Ivy~\cite{ivy} and
     automatically verified with the help of Z3~\cite{z3}. To the best
-    of our knowledge, this is the first time the meta-theory of a
-    formal system is proven completely inside an SMT solver.
+    of our knowledge, this is the first time a formal system's
+    meta-theory is proven completely inside an SMT solver.
 
   \item We formalize \quark distributed machine that implements the
     semantics of the \quark abstract machine in the context of an
